--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "chord-transposer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
-    "standard":"latest",
-    "snazzy":"latest",
+    "standard": "latest",
+    "snazzy": "latest",
     "standard-format": "latest"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-copy": "~0.8.2",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-uglify": "~0.10.0",
-    "grunt-contrib-compass": "~1.0.4",
-    "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-imagemin": "~1.0.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-compress": "~0.14.0",
-    "grunt-svgmin": "~3.0.0",
     "grunt-concurrent": "~2.0.4",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-compress": "~0.14.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-uglify": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-sass": "^1.1.0",
+    "grunt-svgmin": "~3.0.0",
     "jit-grunt": "^0.9.1",
     "time-grunt": "~1.2.2"
   },
