--- a/wercker.yml
+++ b/wercker.yml
@@ -34,3 +34,18 @@ build:
         code: |
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
+deploy:
+  # The steps that will be executed on build
+  # Steps make up the actions in your pipeline
+  # Read more about steps on our dev center:
+  # http://devcenter.wercker.com/docs/steps/index.html
+  steps:
+    - script:
+        name: Install Grunt
+        code: |
+          echo "npm-install -g grunt-cli"
+
+    - script:
+        name: Grunt build
+        code: |
+          echo "grunt build"
