--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "chord-transposer",
   "version": "0.0.4",
   "dependencies": {
-    "crx": "^3.0.3",
-    "dotenv": "^2.0.0",
-    "ftp": "^0.3.10",
-    "mkdirp": "^0.5.1",
-    "request": "^2.69.0",
     "snazzy": "^5.0.0",
     "standard": "^8.1.0",
     "standard-format": "^2.2.3"
   },
   "devDependencies": {
+    "fstream": "^1.0.10",
     "grunt": "~0.4.5",
     "grunt-concurrent": "~2.0.4",
     "grunt-contrib-clean": "~0.6.0",
@@ -24,10 +20,11 @@
     "grunt-sass": "^1.1.0",
     "grunt-svgmin": "~3.0.0",
     "jit-grunt": "^0.9.1",
+    "tar": "^2.2.1",
     "time-grunt": "~1.2.2"
   },
   "scripts": {
-    "test": "node_modules/.bin/standard \"app/**/*.js\" \"build/**/*.js\" \"*.js\" --verbose | snazzy",
+    "test": "node_modules/.bin/standard \"app/**/*.js\" \"*.js\" --verbose | snazzy",
     "standardize": "node_modules/.bin/standard-format -w"
   },
   "standard": {
