Update github release details

--- a/wercker.yml
+++ b/wercker.yml
@@ -50,6 +50,8 @@ github-release:
   steps:
     - github-create-release:
         token: $GITHUB_TOKEN
+        title: Release v1.0.0
+        body: Download the chrome extension file below (file release.tar.gz)
         tag: v1.0.0
     - github-upload-asset:
         token: $GITHUB_TOKEN
