--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chord-transposer",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "dependencies": {
     "snazzy": "^5.0.0",
     "standard": "^8.1.0",
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "fstream": "^1.0.10",
-    "grunt": "~0.4.5",
+    "grunt": "^1.0.1",
     "grunt-concurrent": "~2.0.4",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.1",
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "test": "node_modules/.bin/standard \"app/**/*.js\" \"*.js\" --verbose | snazzy",
+    "build": "npm run test && node_modules/.bin/grunt build && node build.js",
     "standardize": "node_modules/.bin/standard-format -w"
   },
   "standard": {
